# job_finder_db

./: .gitignore  README.md  config.py  main.py  pyproject.toml
api/: hh_api.py
database/: create_database.py  create_tables.py
models/: company.py  vacancy.py
storage/: db_manager.py
tests/: test_db_manager.py
