[tool.poetry]
name = "job-finder-db"
version = "0.1.0"
description = ""
authors = ["a12345 <shu.m2010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
